# scriptor

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  deploy.yml
assets/: data.json
src/: main.rs
src/file_reader/: mod.rs  read_json.rs  scripts.rs
src/file_reader/test_data/: scripts.json
src/json_reader/: find_scripts.rs  mod.rs
src/ui/: help.rs  input.rs  layout.rs  mod.rs  render.rs  table.rs
src/ui/snapshots/: scriptor__ui__help__tests__it_help_text_has_correct_data.snap  scriptor__ui__input__tests__it_generate_input_renders_correctly.snap  scriptor__ui__render__tests__it_draw_snapshot.snap  scriptor__ui__table__tests__it_generate_table_renders_correctly.snap
